# Lock-Free-MPMC-Queue

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md
.github/workflows/: ci.yml
bench/: bench_main.cpp  harness.hpp  plot.py
include/lfq/: hazard_pointer.hpp  inject.hpp  ms_queue.hpp  mutex_queue.hpp  padding.hpp
model/: hp_model.hpp  model_check.cpp  queue_model.hpp
results/: final_deq_moodycamel.csv  final_deq_moodycamel_summary.txt  final_deq_ms-hp.csv  final_deq_ms-hp_summary.txt  final_deq_ms.csv  final_deq_ms_summary.txt  final_deq_mutex.csv  final_deq_mutex_summary.txt  final_enq_moodycamel.csv  final_enq_moodycamel_summary.txt  final_enq_ms-hp.csv  final_enq_ms-hp_summary.txt  final_enq_ms.csv  final_enq_ms_summary.txt  final_enq_mutex.csv  final_enq_mutex_summary.txt  final_pairs_moodycamel.csv  final_pairs_moodycamel_summary.txt  final_pairs_ms-hp-unpadded.csv  final_pairs_ms-hp-unpadded_summary.txt  final_pairs_ms-hp.csv  final_pairs_ms-hp_summary.txt  final_pairs_ms-unpadded.csv  final_pairs_ms-unpadded_summary.txt  final_pairs_ms.csv  final_pairs_ms_summary.txt  final_pairs_mutex.csv  final_pairs_mutex_summary.txt  final_pc_1to3_moodycamel.csv  final_pc_1to3_moodycamel_summary.txt  final_pc_1to3_ms-hp.csv  final_pc_1to3_ms-hp_summary.txt  final_pc_1to3_ms.csv  final_pc_1to3_ms_summary.txt  final_pc_1to3_mutex.csv  final_pc_1to3_mutex_summary.txt  final_pc_3to1_moodycamel.csv  final_pc_3to1_moodycamel_summary.txt  final_pc_3to1_ms-hp.csv  final_pc_3to1_ms-hp_summary.txt  (+70 more)
tests/: leak_check.hpp  reclaim_test.cpp  stress_test.cpp  unit_test.cpp
